--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="img-01 (1).webp" alt="avatar de Dean Whinchester" class="rounded-circle" width="150" height="150"
+        <img src="img/img-01 (1).webp" alt="avatar de Dean Whinchester" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Dean _</p>
         <h1>Eu caço monstros</h1>
@@ -31,7 +31,7 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img-02.jpg"card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/img-02.jpg"card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                          <h5 class="card-title">Eu com meu carro: Baby</h5>
                         <p class="card-text">Estava feliz apos matar hitler no aeroporto!
@@ -44,7 +44,7 @@
             <!-- Projeto 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img-04.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/img-04.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Estamos em uma caçada.</h5>
                         <p class="card-text">Estamos a procura dos vampiros para acabarcom esse ninho.</p>
@@ -57,7 +57,7 @@
             <!-- Projeto 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img-01.webp" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/img-01.webp" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Dean muito feliz
                         </h5>
@@ -140,7 +140,7 @@
         <h2>Entre em contato</h2>
         <div>
             <i class="bi bi-github"></i>
-            <a href="https://github.com/femascheti">GitHub</a>
+            <a href="https://github.com/sznatalia15">GitHub</a>
         </div>
         <p class="my-5 text-center">© Copyright 2024. Produzido por Fernanda Mascheti</p>
     </footer>
